# harnesss-bench

./: .aider.chat.history.md  .difficulty_counter  .gitignore  .gitmodules  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
config/: claude45-model-settings.yml  codex-model-settings.yml
docs/: ADDING_TESTS.md  ADVANCED_DDS_TASKS_PLAN.md  BENCHMARKING.md  DDS_TASKS_REFERENCE.md  DIFFICULTY_TRACKING.md  HARDER_TESTS_BACKLOG.md  HARNESS_IMPLEMENTATION.md  HARNESS_STATUS.md  LINUX_METR_ENVIRONMENT.md  PROTOCOL.md
docs/specs/: LB-01_bandwidth_optimization.md  LD-08_topic_query.md  LP-01_persistence_recovery.md  LR-02_routing_service_adapter.md  LS-01_participant_banishing.md
results/archive/: dds_benchmark_anthropic_claude-3-5-haiku-20241022_20260115_113036.json  dds_benchmark_anthropic_claude-haiku-4-5-20251001_20260115_120706.json  dds_benchmark_anthropic_claude-opus-4-20250514_20260115_112435.json  dds_benchmark_anthropic_claude-opus-4-5-20251101_20260115_120321.json  dds_benchmark_anthropic_claude-sonnet-4-20250514_20260115_111819.json  dds_benchmark_anthropic_claude-sonnet-4-5-20250929_20260115_114318.json  dds_benchmark_anthropic_claude-sonnet-4-5-20250929_20260115_115850.json  dds_benchmark_gpt-5.2-codex_20260115_123611.json  dds_benchmark_gpt-5.2-codex_20260115_130428.json  dds_benchmark_gpt-5.2_20260115_125346.json  dds_benchmark_o3-mini_20260115_123116.json  dds_benchmark_openai_gpt-5.2-codex_20260115_111133.json
results/dds-benchmark-2025-01-14/: dds-benchmark-results.json
scripts/: aggregate_and_chart.py  aggregate_results.py  cab_websocket_stability_test.py  generate_charts_from_summary.py  generate_dds_charts.py  migrate_dds_tasks.py  run_dds_benchmark.py  run_metr_benchmark.py  run_metr_tasks.py  run_new_tests.py  summarize_results.py  test_harness_logging.py
scripts/archive/: extract_all_results.py  generate_dds_charts.py  migrate_to_new_structure.py
src/harness_bench/: __init__.py  cli.py  exceptions.py
templates/harness-bench-leaderboard/: README.md
templates/harness-bench-submissions/: SUBMISSION_RULES.md
tests/: __init__.py  conftest.py
tests/fixtures/: sample_manifest.json
tests/integration/: __init__.py
tests/unit/: __init__.py  test_exceptions.py  (+8 more)
(+744 files in other folders)
